--- a/src/App.css
+++ b/src/App.css
@@ -57,13 +57,10 @@ h1 {
   justify-self: center;
   grid-column: 1 / 3;
   grid-row: 3 / 4;
-  width: 50%;
+  width: 55%;
   border: 0.5em solid #24504E;
-  border-radius: 30px
-}
-
-#timer-label {
-  background-color: 
+  border-radius: 30px;
+  padding: 0.5em
 }
 
 #time-left {
